# sp800-185

./: .travis.yml  Cargo.toml  README.md
src/: cshake.rs  kmac.rs  lib.rs  parallelhash.rs  tuplehash.rs  utils.rs
tests/: cshake.rs  kmac.rs  parallelhash.rs  tuplehash.rs
