[package]
name = "sp800-185"
version = "0.1.0"
authors = ["quininer kel <quininer@live.com>"]
description = " SHA-3 Derived Functions (SP800-185) Implementation in Rust."
repository = "https://github.com/quininer/sp800-185"
license = "MIT"

[dependencies]
tiny-keccak = { git = "https://github.com/quininer/tiny-keccak" }
byteorder = "1.0"
rayon = { version = "0.8", optional = true }

[features]
parallelhash = [ "rayon" ]
