[package]
name = "sp800-185"
version = "0.1.1"
authors = ["quininer kel <quininer@live.com>"]
description = "SHA-3 Derived Functions (SP800-185) Implementation in Rust."
repository = "https://github.com/quininer/sp800-185"
keywords = [ "sha3", "keccak", "hash", "cryptography" ]
categories = [ "cryptography", "no-std" ]
license = "MIT"

[badges]
travis-ci = { repository = "quininer/sarkara" }
appveyor = { repository = "quininer/sarkara" }

[dependencies]
tiny-keccak = "1.3"
byteorder = { version = "1.0", default-features = false }
rayon = { version = "0.8", optional = true }

[features]
parallelhash = [ "rayon" ]
