[package]
name = "sp800-185"
version = "0.2.0"
authors = ["quininer kel <quininer@live.com>"]
description = "SHA-3 Derived Functions (SP800-185) Implementation in Rust."
repository = "https://github.com/quininer/sp800-185"
keywords = [ "sha3", "keccak", "hash", "cryptography" ]
categories = [ "cryptography", "no-std" ]
license = "MIT"

[badges]
travis-ci = { repository = "quininer/sp800-185" }

[dependencies]
tiny-keccak = "^1.4"
byteorder = { version = "1.0", default-features = false }
rayon = { version = "0.9", optional = true }

[features]
parallelhash = [ "rayon" ]
